Starting with View Details Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FAIFA</string>
+    <string name="title_activity_view_details">ລາຍລະອຽດຄ່າໄຟຟ້າ</string>
 </resources>
